@@ -10,3 +10,5 @@ JRS 01/01/2019
 * Toggling a barcode bit now toggles a class, which is more robust than
   directly reading/writing the opacity.  Set CSS styles for toggling the
   barcode bit opacity.
+  
+* Added the ability to add multiple classes to a barcode bit box.
